--- a/app/views/produtos/show.html.erb
+++ b/app/views/produtos/show.html.erb
@@ -49,17 +49,17 @@
     </td><td>
 		<p>
 		  <b><%= t('produto.valor_compra')%>:</b>
-		  <span style="color:#006400"><%= @produto.valor_compra.real_formatado if @produto  %></span>
+		  <span style="color:#006400"><%= formata_float(@produto.valor_compra) if @produto  %></span>
 		</p>
  
 		<p>
 		  <b><%= t('produto.valor_venda')%>:</b>
-		  <span style="color:#006400"><%= @produto.valor_venda.real_formatado if @produto  %></span>
+		  <span style="color:#006400"><%= formata_float(@produto.valor_venda) if @produto  %></span>
 		</p>
  
 		<p>
 		  <b><%= t('produto.valor_minimo')%>:</b>
-		  <span style="color:#006400"><%= @produto.valor_minimo.real_formatado if @produto  %></span>
+		  <span style="color:#006400"><%= formata_float(@produto.valor_minimo) if @produto  %></span>
 		</p>
 		<p>
 		  <b><%= t('produto.margem_lucro')%>:</b>
@@ -72,7 +72,7 @@
 			</p>
 			<p>
 		  		<b><%= t('produto.valor_vendido')%>:</b>
-		  		<span style="color:#006400"><%= @produto.valor_vendido.real_formatado if @produto  %></span>
+		  		<span style="color:#006400"><%= formata_float(@produto.valor_vendido) if @produto  %></span>
 			</p>
 		<% end %>	
 		
