Ajustes no botao cancelar

--- a/app/views/categorias/_form.html.erb
+++ b/app/views/categorias/_form.html.erb
@@ -38,7 +38,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= categorias_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= categorias_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
