--- a/app/views/cidades/_form.html.erb
+++ b/app/views/cidades/_form.html.erb
@@ -25,7 +25,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= cidades_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= cidades_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
