--- a/app/views/compras/_form.html.erb
+++ b/app/views/compras/_form.html.erb
@@ -43,7 +43,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= compras_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= compras_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
