--- a/app/views/despesas/_form.html.erb
+++ b/app/views/despesas/_form.html.erb
@@ -87,7 +87,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= despesas_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= despesas_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
