--- a/app/views/fornecedores/_form.html.erb
+++ b/app/views/fornecedores/_form.html.erb
@@ -59,7 +59,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= fornecedores_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= fornecedores_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
