--- a/app/views/marcas/_form.html.erb
+++ b/app/views/marcas/_form.html.erb
@@ -31,7 +31,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= marcas_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= marcas_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
