--- a/app/views/pagamento_vendas/_form.html.erb
+++ b/app/views/pagamento_vendas/_form.html.erb
@@ -26,7 +26,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= pagamento_vendas_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= pagamento_vendas_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
