--- a/app/views/produtos/_form.html.erb
+++ b/app/views/produtos/_form.html.erb
@@ -129,7 +129,7 @@
 </table> 
   <div class="actions">
     <%= f.submit t('botao.salvar'), :class => "btn primary" %>
-    <a href="<%= produtos_path %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+    <a class="btn" href="<%= produtos_path %>"><%= t('botao.cancelar')%></a>
   </div>
 <% end %>
 
