--- a/app/views/cliente_mailer/enviar.html.erb
+++ b/app/views/cliente_mailer/enviar.html.erb
@@ -2,15 +2,76 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+
+    <style type="text/css" >
+    table tbody tr:nth-child(odd) td,.table-modelo tbody tr:nth-child(odd) th{background-color:#f9f9f9;}
+    table tbody tr:hover td,.table-modelo tbody tr:hover th{background-color:#f5f5f5;}
+    </style>
+
   </head>
   <body>
-    <h1>Bem vindo! É uma honra te-lo em nosso site! Sr(a), <%= @cliente.nome %></h1>
+    <br>
+    <h3>Prezada Sra Lidiane Mendes,</h3>
     <p>
-      Você foi registrado com sucesso!!!,
+      Segue abaixo seu histórico de pagamento com a Lidia Souza:
     </p>
     <p>
-      Por favor visite o meu site.: www.dedodemoca.ane.com.
+      Total comprado: <span style="color:#006400">R$ 950,00</span>
     </p>
-    <p>Muito obrigado pelo registro, tenha um ótimo dia. Boas Compras</p>
+    <p>
+      <table style="width:70%;margin-bottom:18px;padding:0;font-size:14px;border-collapse:collapse;">
+        <tbody>
+          <tr>
+          <th style="text-align:left;padding:10px 10px 9px;line-height:18px;padding-top:9px;font-weight:bold;vertical-align:middle;border-top:1px solid #ddd;vertical-align:top;">Forma Pagamento</th>
+          <th style="text-align:left;lpadding:10px 10px 9px;ine-height:18px;padding-top:9px;font-weight:bold;vertical-align:middle;border-top:1px solid #ddd;vertical-align:top;">Parcela</th>
+          <th style="text-align:left;padding:10px 10px 9px;line-height:18px;padding-top:9px;font-weight:bold;vertical-align:middle;border-top:1px solid #ddd;vertical-align:top;">Vencimento</th>
+          <th style="text-align:left;padding:10px 10px 9px;line-height:18px;padding-top:9px;font-weight:bold;vertical-align:middle;border-top:1px solid #ddd;vertical-align:top;">Valor</th>
+          <th style="text-align:left;padding:10px 10px 9px;line-height:18px;padding-top:9px;font-weight:bold;vertical-align:middle;border-top:1px solid #ddd;vertical-align:top;">Valor Pago</th>
+          <th style="text-align:left;padding:10px 10px 9px;line-height:18px;padding-top:9px;font-weight:bold;vertical-align:middle;border-top:1px solid #ddd;vertical-align:top;">Data Pagamento</th>
+        </tr>
+        <tr>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">Duplicata</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">1ª</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#1E90FF">22/12/2012</td> 
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400">R$ 291,00</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400">R$ 291,00</td>
+          <td style="padding:10px 10px 9px;ine-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#1E90FF">23/12/2012</td> 
+        </tr>
+       <tr>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">Duplicata</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">2ª</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#1E90FF">23/01/2013</td> 
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400">R$ 291,00</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400">R$ 291,00</td>
+          <td style="padding:10px 10px 9px;ine-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#1E90FF">23/01/2013</td> 
+        </tr>
+        <tr>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">Duplicata</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">3ª</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#1E90FF">23/02/2013</td> 
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400">R$ 291,00</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400">R$ 291,00</td>
+          <td style="padding:10px 10px 9px;ine-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#1E90FF">23/02/2013</td> 
+        </tr>
+        <tr>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">Duplicata</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#666">4ª</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#FF0000">23/03/2013</td> 
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400">R$ 291,00</td>
+          <td style="padding:10px 10px 9px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#006400"></td>
+          <td style="padding:10px 10px 9px;ine-height:18px;text-align:left;vertical-align:top;border-top:1px solid #ddd;color:#1E90FF"></td> 
+        </tr>
+
+       </tbody>
+      </table>
+    </p>  
+
+    <p>
+      Caso possua parcelas em aberto com mais de 40 dias de atraso, seu nome poderá ser enviado para o SPC/Serasa.
+    </p>
+    <p>
+      Visite nosso Facebook e fique por dentro das últimas novidades: <a target="_blank" href="http://www.facebook.com/lidia.souza.5268750?fref=ts">http://www.facebook.com/lidia.souza</a>
+    </p>
+
   </body>
 </html>
